# ADOdin

./: .gitignore  .gitlab-ci.yml  .gitremotes  CMakeLists.txt  ExcaliburTestSetup.edl  LICENSE  Makefile  README.md  setup_acquisition.sh  start_tmux.sh
configure/: CONFIG_SITE  RELEASE  RELEASE.local  RULES
etc/: builder.py  eiger.py  excalibur.py  module.ini  odin.py
etc/arc-scripts/: README.md  layout.kdl  layout.yml  start_z.sh
etc/builder/: __init__.py  arc.py  eiger.py  excalibur.py  odin.py  plugins.py  tristan.py  util.py  xspress.py
etc/makeIocs/: Makefile  Makefile.iocs  arc-lab.xml  arc-sim.xml  arc.xml  eiger.xml  eiger16M.xml  eiger4M.xml  eiger9M.xml  example.xml  excalibur.xml  lab29_1m.xml  lab29_3m.xml  odin_data.xml  prepareCustom.sh  tristan.xml  tristan_RELEASE  xspress.xml
etc/tools/: http_client.py  meta_plot.py  remote_server_check.sh  requirements.txt  server_check.sh  startup_eiger.sh  startup_eiger16M.sh  startup_eiger4M.sh  startup_excalibur.sh  zmq_client.py
etc/tools/eiger/test_scripts/test_acquisition/: README.md  setup.cfg
etc/tools/eiger/test_scripts/test_acquisition/test_acquisition/: __init__.py  test_acquisition.py
etc/tools/odin_acquisition/: README.md  requirements.txt  setup.cfg
iocs/: Makefile
iocs/eiger/: Makefile
iocs/eiger/configure/: CONFIG_SITE  RELEASE
iocs/xspress/: Makefile
iocs/xspress/configure/: CONFIG_SITE  RELEASE  RELEASE.local
odinApp/: Makefile
odinApp/Db/: BloscPlugin.template  EigerDetector.template  EigerFan.template  Excalibur1NodeOD.template  Excalibur2FemStatus.template  Excalibur2NodeFP.template  Excalibur2NodeOD.template  Excalibur4NodeFP.template  Excalibur4NodeOD.template  Excalibur6FemStatus.template  Excalibur8NodeFP.template  Excalibur8NodeOD.template  ExcaliburDetector.template  ExcaliburFP.template  ExcaliburFemHousekeeping.template  ExcaliburFemStatus.template  ExcaliburOD.template  FrameProcessorPlugin.template  LiveViewPlugin.template  Makefile  MetaListener.template  OdinData.template  OdinDataDriver.template  OffsetAdjustmentPlugin.template  SumPlugin.template  Tristan10MStatus.template  Tristan1MStatus.template  Tristan4NodeOD.template  Tristan8NodeOD.template  TristanDetector.template  TristanOD.template  TristanStatus.template  UIDAdjustmentPlugin.template  eigerDetector.template  excalibur2FemStatus.template  excalibur2NodeFP.template  excalibur4NodeFP.template  excalibur6FemStatus.template  excalibur8NodeFP.template  excaliburDetector.template  (+9 more)
odinApp/Db/arc/: Arc1FemHousekeeping.template  Arc1FemStatus.template  Arc1NodeOD.template  Arc2FemHousekeeping.template  Arc2FemStatus.template  Arc2NodeOD.template  Arc4NodeOD.template  ArcBaseFemHousekeeping.template  ArcDetector.template  ArcFemStatus.template  ArcOD.template  ArcODMode.template  Makefile
odinApp/Db/eiger/: Eiger1.template  Eiger2.template  EigerBase.template  EigerDetector.template  EigerFan.template  Makefile
odinApp/Db/excalibur/: Excalibur1NodeOD.template  Excalibur2FemHousekeeping.template  Excalibur2FemStatus.template  Excalibur2NodeOD.template  Excalibur4NodeOD.template  Excalibur6FemHousekeeping.template  Excalibur6FemStatus.template  Excalibur8NodeOD.template  ExcaliburBaseFemHousekeeping.template  ExcaliburDetector.template  ExcaliburFemHousekeeping.template  ExcaliburFemStatus.template  ExcaliburOD.template  ExcaliburODMode.template  Makefile
odinApp/Db/odin/: Makefile  MetaListener.template  OdinData.template  OdinDataDriver.template  OdinProcServ.template  OdinProcServProcess.template  ParameterAdjustmentPlugin.template  SumPlugin.template  UIDAdjustmentPlugin.template
odinApp/Db/tristan/: Makefile  Tristan100NodeOD.template  Tristan10MStatus.template  Tristan16NodeOD.template  Tristan1MStatus.template  Tristan2MStatus.template  Tristan4NodeOD.template  Tristan8NodeOD.template  TristanDetector.template  TristanFemStatus.template  TristanOD.template  TristanServer10NodeOD.template  TristanServer8NodeOD.template  TristanStatus.template
odinApp/Db/xspress/: Makefile  XspressChannel.template  XspressDetector.template  XspressFem.template
odinApp/config/: Makefile  eiger_fan_startup  eiger_meta_startup  fp_arc.json  fp_custom.json  fp_eiger.json  fp_excalibur.json  fp_startup  fp_tristan.json  fp_xspress.json  fr_arc1.json  fr_arc2.json  fr_eiger.json  fr_excalibur.json  fr_excalibur_1m.json  fr_excalibur_3m.json  fr_log4cxx.xml  fr_startup  fr_tristan.json  fr_tristan_10m.json  fr_xspress.json  layout.kdl  log4cxx_template.xml  meta_startup  odin_server.ini  odin_server_startup  odin_startup  odinprocservcontrol.yaml  tristan_meta_startup  tristan_simulator_startup  udp_arc.json  udp_excalibur.json  xspress_control_server_start_up.sh  xspress_live_startup
odinApp/op/edl/: BloscPlugin.edl  EigerDAQMain.edl  EigerFan_embed.edl  EigerMain.edl  Excalibur2FemStatus.edl  Excalibur6FemStatus.edl  ExcaliburAcquisition.edl  ExcaliburAdvanced.edl  ExcaliburDAQ4Status.edl  (+47 more)
odinApp/src/: Makefile  OdinClient.cpp  OdinClient.h  OdinDataConfig.h  OdinDataDriver.cpp  OdinDataDriver.h  OdinDataRestApi.cpp  OdinDataRestApi.h  OdinDetector.cpp  OdinDetector.h  OdinDetectorRestApi.cpp  OdinDetectorRestApi.h  OdinDetectorSupport.dbd  OdinLiveViewListener.cpp  OdinLiveViewListener.h  OdinRestApi.cpp  OdinRestApi.h  odinDataDriver.cpp  odinDataDriver.h  odinDataRestApi.cpp  odinDataRestApi.h  odinDetector.cpp  odinDetector.h  odinDetectorRestApi.cpp  odinDetectorRestApi.h  odinDetectorSupport.dbd  odinRestApi.cpp  odinRestApi.h  test.cpp
(+143 files in other folders)
