[metadata]
name = test_acquisition
version = 1.0.0
description = Run test odin-eiger acquisitions
author = Emma Dixon
author_email = emma.dixon@diamond.ac.uk
license = Apache License 2.0
long_description = file: README.md
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
    cothread>=2.17
    timeout-decorator

[options.entry_points]
console_scripts =
    test_acquisition = test_acquisition.test_acquisition:main
